--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,7 @@ PORT=3000
 HOST=127.0.0.1
 RUST_LOG=debug
 # DATABASE_URL=postgres://user:password@localhost/dbname
+
+# Celo Blockchain RPC (optional - uses mock data if not set)
+# Alfajores Testnet: https://alfajores-forno.celo-testnet.org
+# CELO_RPC_URL=https://alfajores-forno.celo-testnet.org
