--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -14,6 +14,8 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 dotenv = "0.15"
 sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"], optional = true }
+reqwest = { version = "0.11", features = ["json"] }
+ethers = { version = "2.0", features = ["ws"] }
 
 [features]
 default = []
