--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,18 @@
 PORT=3000
 HOST=127.0.0.1
 RUST_LOG=debug
-# DATABASE_URL=postgres://user:password@localhost/dbname
 
-# Celo Blockchain RPC (optional - uses mock data if not set)
-# Alfajores Testnet: https://alfajores-forno.celo-testnet.org
-# CELO_RPC_URL=https://alfajores-forno.celo-testnet.org
+# ✅ CONFIGURED: Celo Blockchain RPC (Primary: Alchemy, Fallback: Forno)
+CELO_RPC_URL=https://celo-mainnet.g.alchemy.com/v2/GdgtvCyIue4W16Uw7yg8p
+
+# AI Model Configuration
+# Option 1: vLLM Local Server (Recommended - Best Performance)
+VLLM_URL=http://localhost:8000/v1/completions
+VLLM_MODEL=deepseek-ai/DeepSeek-OCR
+
+# Option 2: HuggingFace API
+# HF_API_KEY=hf_your_key_here
+# HF_MODEL=deepseek-ai/DeepSeek-OCR
+
+# Option 3: OpenAI GPT-4
+# OPENAI_API_KEY=sk-your-key-here
