--- a/backend/.env
+++ b/backend/.env
@@ -6,13 +6,17 @@ RUST_LOG=debug
 CELO_RPC_URL=https://celo-mainnet.g.alchemy.com/v2/GdgtvCyIue4W16Uw7yg8p
 
 # AI Model Configuration
-# Option 1: vLLM Local Server (Recommended - Best Performance)
-VLLM_URL=http://localhost:8000/v1/completions
-VLLM_MODEL=deepseek-ai/DeepSeek-OCR
+# Option 1: Groq API (Fastest - Recommended)
+GROQ_API_KEY=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
+GROQ_MODEL=llama-3.3-70b-versatile
 
-# Option 2: HuggingFace API
+# Option 2: vLLM Local Server
+# VLLM_URL=http://localhost:8000/v1/completions
+# VLLM_MODEL=openai/gpt-oss-20b
+
+# Option 3: HuggingFace API
 # HF_API_KEY=hf_your_key_here
-# HF_MODEL=deepseek-ai/DeepSeek-OCR
+# HF_MODEL=openai/gpt-oss-20b
 
-# Option 3: OpenAI GPT-4
+# Option 4: OpenAI GPT-4
 # OPENAI_API_KEY=sk-your-key-here
