--- a/backend/.env
+++ b/backend/.env
@@ -6,17 +6,8 @@ RUST_LOG=debug
 CELO_RPC_URL=https://celo-mainnet.g.alchemy.com/v2/GdgtvCyIue4W16Uw7yg8p
 
 # AI Model Configuration
-# Option 1: Groq API (Fastest - Recommended)
-GROQ_API_KEY=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
-GROQ_MODEL=llama-3.3-70b-versatile
-
-# Option 2: vLLM Local Server
-# VLLM_URL=http://localhost:8000/v1/completions
-# VLLM_MODEL=openai/gpt-oss-20b
-
-# Option 3: HuggingFace API
-# HF_API_KEY=hf_your_key_here
-# HF_MODEL=openai/gpt-oss-20b
-
-# Option 4: OpenAI GPT-4
-# OPENAI_API_KEY=sk-your-key-here
+# AI features currently use mock responses
+# To enable real AI, configure one of these options:
+# - Groq API: GROQ_API_KEY=your_key_here
+# - OpenAI: OPENAI_API_KEY=your_key_here
+# - Local vLLM: VLLM_URL=http://localhost:8000/v1/completions
