--- a/fly.toml
+++ b/fly.toml
@@ -14,9 +14,9 @@ primary_region = "jnb"
 [http_service]
   internal_port = 8080
   force_https = true
-  auto_stop_machines = true
+  auto_stop_machines = false  # Keep app running
   auto_start_machines = true
-  min_machines_running = 0
+  min_machines_running = 1    # Always keep 1 machine running
   processes = ["app"]
 
   [[http_service.checks]]
