Remove Fly.io deployment files

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 # Production Environment Variables for Vercel
 
-# Backend API URL (Fly.io)
-VITE_API_URL=https://sentinel-x-backend.fly.dev/api
+# Backend API URL (update with your backend URL)
+VITE_API_URL=http://localhost:3000/api
