--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -1,11 +1,14 @@
 [phases.setup]
 nixPkgs = ["rust", "cargo", "pkg-config", "openssl"]
 
+[phases.install]
+cmds = []
+
 [phases.build]
-cmds = ["cd backend && cargo build --release"]
+cmds = ["cargo build --release"]
 
 [phases.start]
-cmd = "cd backend && ./target/release/backend"
+cmd = "./target/release/backend"
 
 [variables]
 RUST_VERSION = "1.75.0"
